Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -50,7 +50,7 @@ steps:
       command: 'publish'
       publishWebProjects: false
       projects: '**/Web.csproj'
-      arguments: '--Configuration $(buildConfiguration) --no-restore'
+      arguments: '--configuration $(buildConfiguration) --no-restore'
       modifyOutputPath: false
     displayName: 'publish'
 
